--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.16.1",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.19.1"
   },
   "devDependencies": {
