--- a/package.json
+++ b/package.json
@@ -23,5 +23,17 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.2.4"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mohamed-Dawood/Graduation-Project-Frontend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Mohamed-Dawood/Graduation-Project-Frontend/issues"
+  },
+  "homepage": "https://github.com/Mohamed-Dawood/Graduation-Project-Frontend#readme"
 }
