--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "type": "git",
     "url": "git+https://github.com/Mohamed-Dawood/Graduation-Project-Frontend.git"
   },
-  "author": "",
+  "author": "Mohamed Dawood",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Mohamed-Dawood/Graduation-Project-Frontend/issues"
